<?xml version="1.0"?>
<package>
  <name>rose21_drivers</name>
  <version>0.0.0</version>
  <description>The rose21 lift controller</description>

  <maintainer email="ohendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- <build_depend></build_depend> -->
  
  <!-- <run_depend></run_depend> -->

  <export>
  </export>
</package>