<?xml version="1.0"?>
<package>
  <name>rose21_drivers</name>
  <version>0.0.0</version>
  <description>The rose21 lift controller</description>

  <maintainer email="ohendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rose_transformations</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rose_transformations</run_depend>

  <export>
  </export>
</package>
