<?xml version="1.0"?>
<package>
  <name>rose21_power_controller</name>
  <version>0.0.0</version>
  <description>The rose21 power controller</description>

  <maintainer email="ohendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>operator_messaging</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rose_base_msgs</build_depend>
  <build_depend>rose_common</build_depend>
  <build_depend>rose_hardware_controller</build_depend>
  <build_depend>shared_variables</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>operator_messaging</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rose_base_msgs</run_depend>
  <run_depend>rose_common</run_depend>
  <run_depend>rose_hardware_controller</run_depend>
  <run_depend>shared_variables</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>